[package]
name = "quickentity-rs"
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
itertools = "0.10.3"
md5 = "0.7.0"
rayon = "1.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = [
    "arbitrary_precision",
    "preserve_order",
] }
serde_with = "2.0.1"
egui = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", features = ["png"] }
eframe = "0.19.0"
rfd = "0.10.0"
similar = "2.2.1"
anyhow = "1.0.70"
tryvial = "0.2.0"
fn-error-context = "0.2.1"
auto_context = { path = "auto_context" }
indexmap = { version = "2.1.0", features = ["serde", "rayon"] }
serde_path_to_error = "0.1.14"
env_logger = "0.10.1"
tracing = "0.1.40"
log = "0.4.20"
specta = { version = "=2.0.0-rc.7", features = ["indexmap", "serde_json"] }

[[bin]]
name = "quickentity-rs"
path = "src/main.rs"

[[bin]]
name = "quickentity-gui"
path = "src/gui.rs"
