[package]
name = "quickentity-rs"
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"], optional = true }
itertools = "0.10.3"
md5 = "0.7.0"
rayon = "1.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_with = "2.0.1"
similar = "2.2.1"
anyhow = "1.0.70"
tryvial = "0.2.0"
fn-error-context = "0.2.1"
auto_context = { path = "auto_context" }
indexmap = { version = "2.1.0", features = ["serde", "rayon"] }
serde_path_to_error = "0.1.14"
env_logger = { version = "0.10.1", optional = true }
log = "0.4.20"
specta = { version = "=2.0.0-rc.7", features = ["indexmap", "serde_json"] }
hitman-commons = { git = "https://github.com/atampy25/hitman-commons", features = [
    "resourcelib",
    "serde",
    "specta",
] }
tracing = { version = "0.1.40", optional = true }
rune = { version = "0.13.4", optional = true }
better-rune-derive = { git = "https://github.com/atampy25/better-rune-derive", optional = true }

[features]
default = ["cli"]
cli = ["dep:env_logger", "dep:clap"]
rune = ["dep:rune", "dep:better-rune-derive", "hitman-commons/rune"]

[[bin]]
name = "quickentity_rs"
path = "src/main.rs"
required-features = ["cli"]
